# 5g_allocation

./: CLAUDE.md  CLUSTER_RUNBOOK.md  README.md  pyproject.toml
configs/: cluster_2node_default.yaml  problem_medium.yaml  problem_target.yaml  problem_toy.yaml
pbs/: check_build.pbs  check_dependencies.pbs  check_nodes.pbs  env.sh  gen_parascip_set.py  run_highs_1node.pbs  run_parascip_2node.pbs  smoke_parascip_2node.pbs  smoke_test.sh
scripts/: build_parascip.sh  qstat_monitor.sh  sanity_check.py
src/nr_slice_milp/: cluster_config.py  config.py  constraints.py  export_mps.py  indexing.py  model.py  network.py  parse_solution.py  solve_highs.py
src/nr_slice_milp/evaluate/: cli.py  parascip_log.py  plots.py  speedup.py
tests/: test_constraints.py  test_evaluate.py  test_indexing.py  test_network.py  test_parse_solution.py
